ceammc/ext/src/lib/lex/parser_path_template.rl
# include "lex/parser_path_template.h"
# include "lex/ragel_common.h"

# include <cstring>
# include <limits>
# include <cstdint>

namespace ceammc {
namespace parser {

%%{

machine parser_path_template;

action prefix_start  { if(begin) *begin = fpc; }
action prefix_done   { if(end)   *end = fpc; }

home      = ('%HOME%'          | '~')                          %{ res = DirectoryTemplate::Home; };
audio     = ('%' ('AUDIO'|'MUSIC')                        '%') %{ res = DirectoryTemplate::Audio; };
video     = ('%' ('VIDEO'|('MOVIE' 'S'?))                 '%') %{ res = DirectoryTemplate::Video; };
picture   = ('%' ('IMAGE' | 'IMG' | ('PIC' 'TURE'? 'S'?)) '%') %{ res = DirectoryTemplate::Picture; };
document  = ('%DOC' 'UMENT'? 'S'?                         '%') %{ res = DirectoryTemplate::Document; };
download  = ('%DOWNLOAD' 'S'?                             '%') %{ res = DirectoryTemplate::Download; };
desktop   = ('%DESKTOP%')                                      %{ res = DirectoryTemplate::Desktop; };
tmp       = ('%TMP%')                                          %{ res = DirectoryTemplate::Tmp; };
cwd       = ('%CWD%')                                          %{ res = DirectoryTemplate::Cwd; };

proto  = 'file://';
prefix = (home | audio | video | picture | document | download | desktop | tmp | cwd)
            >prefix_start
            %prefix_done;

unknown = (('%' [A-Z0-1]+ '%') - prefix) %{ res = DirectoryTemplate::Unknown; }
            >prefix_start
            %prefix_done;

other  = [^0];

main := proto? (prefix | unknown) other* 0 @{ fbreak; };
write data;

}%%

DirectoryTemplate path_get_dir_template(const char* path, const char** begin, const char** end) {
    int cs = 0;
    const char* p = path;
    DirectoryTemplate res = DirectoryTemplate::None;

    if (begin)
        *begin = nullptr;

    if (end)
        *end = nullptr;

    %% write init;
    %% write exec noend;

    if (cs >= %%{ write first_final; }%%)
        return res;
    else
        return DirectoryTemplate::None;
}

} // namespace parser
} // namespace ceammc
